[package]
name = "rumqtt-json"
version = "0.1.0"
edition = "2021"

[dependencies]
rumqttc = "0.24.0"
tokio = { version = "1.41.0", features = ["full"] }
chrono = "0.4.38"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"